--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -50,7 +50,7 @@
             <TextView
                 android:id="@+id/item_info_desc"
                 android:lineSpacingExtra="5dp"
-                android:layout_below="@+id/news_header"
+                android:layout_below="@+id/item_header"
                 android:layout_margin="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
